# das-flwr-heatdemand

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run_gpu.sh
configs/: config.yaml
dasfl/: client_app.py  data_utils.py  models.py  server_app.py  task.py
paper/: README.md
pipeline/: add_weather_patch.py  analyze_outliers.py  analyze_peak_load.py  analyze_peaks.py  analyze_portfolio_aggregation.py  analyze_portfolio_aggregation_v2.py  anonymise_buildings.py  apply_exclusion_patch.py  build_features.py  computational_cost_logs.py  compute_multiseed_stats.py  demonstrate_demand_forecast.py  diagnose_negative_dt.py  explore_data.py  extract_costs.py  find_clean_prediction_candidates.py  generate_paper_figures.py  generate_peak_figures.py  generate_prediction_examples.py  generate_prediction_examples.py.bak2  generate_results_table.py  oracle_selective_deployment.py  patch_round_evaluation.py  patch_streaming_fl.py  plot_24h_profile.py  plot_fl_convergence.py  plot_sensitivity.py  quick_analysis.py  run_fl.py  run_v5_multihorizon.sh  run_v5_portfolio.sh  run_v5_scalability_complete.sh  select_buildings.py  selective_personalisation_analysis.py  sensitivity_test.py  simulate_rolling_168h.py  std_results.py  train_centralised_mlp.py  train_centralised_xgboost.py  train_local_baseline.py  (+4 more)
scripts/: stamp_preprint.py
